--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -294,186 +295,68 @@ img {
 <hr />
 <h1>个人信息</h1>
 <ul>
-<li>胶布帝/男/1990 </li>
-<li>本科/萌鹿大学计算机系 </li>
-<li>工作年限：3年</li>
-<li>微博：<a href="http://weibo.com/jobdeer">@JobDeer</a> （<code>如果没有技术相关内容，也可以不放</code>）</li>
-<li>技术博客：http://blog.github.io ( <code>使用GitHub Host的Big较高</code>  )</li>
-<li>
-<p>Github：http://github.com/geekcompany ( <code>有原创repo的Github帐号会极大的提升你的个人品牌</code>  )</p>
-</li>
-<li>
-<p>期望职位：Java高级程序员，架构师</p>
-</li>
-<li>期望薪资：税前月薪15k~20k，特别喜欢的公司可例外</li>
-<li>期望城市：北京</li>
+<li>祝泽勇/男/1993</li>
+<li>专科/广东工贸职业技术学院计算机系软件技术 </li>
+<li>工作年限：2年</li>
+<li>联系电话：18819446904</li>
+<li>email ： scott_zz@163.com</li>
+<li>期望职位: java软件工程师</li>
+<li>技术博客：https://my.oschina.net/WWWW23223/</li>
 </ul>
 <hr />
 <h1>工作经历</h1>
 <p>（工作经历按逆序排列，最新的在最前边，按公司做一级分组，公司内按二级分组）</p>
-<h2>ABC公司 （ 2012年9月 ~ 2014年9月 ）</h2>
-<h3>DEF项目</h3>
-<p>我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。</p>
-<h3>GHI项目</h3>
-<p>我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。</p>
+<h2>广州八斗科技有限公司 （ 2015年4月 ~ 2016年2月 ）</h2>
+<h3>工资发放系统</h3>
+<p>系统基于B/S架构。采用基于MVC模式整合Struts2，Hibernate，Spring进行开发， 前端用到的框架是LigerUi(类EasyUi)。包括有工人信息模块，信息验证模块，工资发放账目，工资设定，工人工作记录等。</p>
+<p>本人负责的是工人信息模块，开发工人信息的录入，修改，删除，导出等功能。前端展示用到LigerUi， jquery，js，ajax等技术，后台代码采用整合SSH进行对数据的控制，持久化等管理。</p>
+<h3>进销存项目</h3>
+<p>包括有销售，采购，财务，库存，行政，微信等几大模块。</p>
+<p>本人负责的是采购模块。其中包括采购回顾，销售报表统计，供应商，采购计划，财务付款，仓库入货等小模块。 根据需求说明书，个人独立完成了数据库，类的设计，页面开发，测试等。此系统整体采用MVC模式，用Struts2进行流程的控制， 前端页面使用jstl标签及LigerUi（用法与EasyUi相似）框架显示，还使用到ajax，js,jquery等技术。业务层使用的是Spring， 持久层使用的是Hibernate实现；数据库使用的是mysql。技术难点：商品数据统计不能过慢，业务逻辑性较强，涉及流程处理</p>
+<h2>深圳点墨网络科技有限公司 （ 2016年 ）</h2>
+<h3>教育系统</h3>
+<p>教育O2O系统。
+本人负责数据库的一些设计，后台个人中心的功能的开发，课程发现（课程，老师，机构等功能），发现模块（附近机构，同学圈，活动等功能），涉及技术：spring,springmvc,mybatis，jquery,script,ajax,微信开发（由于公司发展不下去，团队解散）</p>
+<h2>深圳市关键词教育股份有限公司 （ 2016年6月 ~ 2017年6月 ）</h2>
+<h3>HR系统</h3>
+<p>系统结构介绍。
+人事信息管理模块：包括人员信息，员工信息，教育信息，假期信息，工作经历等</p>
+<p>系统管理模块：包括组织架构，区域管理、 菜单管理、角色权限管理、数据字典管理，用户管理等。</p>
+<p>系统功能：
+人事模块除了基本的crud 导入导出，还与钉钉系统中的数据进行了整合，操作员进行员工信息的增删改时会同时对钉钉系统中的对应的数据进行相对应的操作。 </p>
+<p>系统管理模块中基本包括了一个系统的基本配置功能，组织架构也是与钉钉中的组织架构进行了整合绑定，细粒度的权限管理能过滤行，列。</p>
+<p>公司的员工能在钉钉系统中的微应用进行登录并查看或修改自己的一些数据（需管理员开放相关权限），也能通过使用钉钉扫码进行登录系统。</p>
+<p>此系统为本人独立开发。</p>
+<p>开发中遇到的最大难题就是权限管理这一块，由于要求权限要能控制到数据的某个字段，这对于未接触过这方面的我是一个挑战，但最终采用一种数据共享规则的方案（配置规则，视图等）解决了这问题，不同角色的用户能查看，增加，修改，删除不同数据（记录或字段）。</p>
+<p>还有就在与钉钉系统整合过程中，数据的关联由于设计不合理出现一些问题，最终通过优化数据库的设计来解决。</p>
+<p>主要使用技术：
+JFinal (mvc框架)
+ligerui （前端展示框架）
+h2 （内存数据库，缓存热点数据）
+mysql (数据库)
+shiro ( 权限管理)
+so on</p>
+<h3>vpn登录管理项目</h3>
+<p>这是一个管理用户与第三方vpn供应商的项目。本人负责后台功能的实现，包括文件上传，配置，打包，与钉钉用户的验证等。
+主要使用技术：
+JFinal html css 等</p>
 <h3>其他项目</h3>
-<p>（每个公司写2~3个核心项目就好了，如果你有非常大量的项目，那么按分类进行合并，每一类选一个典型写出来。其他的一笔带过即可。）</p>
-<h2>JKL公司 （ 2010年3月 ~ 2012年8月 ）</h2>
-<h3>MNO项目</h3>
-<p>我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。</p>
-<h3>PQR项目</h3>
-<p>我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。</p>
-<h3>其他项目</h3>
-<p>（每个公司写2~3个核心项目就好了，如果你有非常大量的项目，那么按分类进行合并，每一类选一个典型写出来。其他的一笔带过即可。）</p>
+<p>抽奖项目，校区电话录音仪数据读取项目</p>
 <hr />
-<h1>开源项目和作品</h1>
-<p>（这一段用于放置工作以外的、可证明你的能力的材料）</p>
-<h2>开源项目</h2>
-<p>（对于程序员来讲，没有什么比Show me the code能有说服力了）</p>
-<ul>
-<li><a href="http://github.com/yourname/projectname">STU</a>：项目的简要说明，Star和Fork数多的可以注明</li>
-<li><a href="http://github.com/yourname/projectname">WXYZ</a>：项目的简要说明，Star和Fork数多的可以注明</li>
-</ul>
-<h2>技术文章</h2>
-<p>（挑选你写作或翻译的技术文章，好的文章可以从侧面证实你的表达和沟通能力，也帮助招聘方更了解你）</p>
-<ul>
-<li><a href="http://get.jobdeer.com/706.get">一个产品经理眼中的云计算：前生今世和未来</a></li>
-<li><a href="http://get.jobdeer.com/343.get">来自HeroKu的HTTP API 设计指南(翻译文章)</a> （ <code>好的翻译文章可以侧证你对英文技术文档的阅读能力</code>）</li>
-</ul>
-<h2>演讲和讲义</h2>
-<p>（放置你代表公司在一些技术会议上做过的演讲，以及你在公司分享时制作的讲义）</p>
-<ul>
-<li>2014架构师大会演讲：<a href="http://jobdeer.com">如何通过Docker优化内部开发</a></li>
-<li>9月公司内部分享：<a href="http://jobdeer.com">云计算的前生今世</a></li>
-</ul>
 <h1>技能清单</h1>
-<p>（我一般主张将技能清单写入到工作经历里边去。不过很难完整，所以有这么一段也不错）</p>
 <p>以下均为我熟练使用的技能</p>
 <ul>
-<li>Web开发：PHP/Hack/Node</li>
-<li>Web框架：ThinkPHP/Yaf/Yii/Lavaral/LazyPHP</li>
-<li>前端框架：Bootstrap/AngularJS/EmberJS/HTML5/Cocos2dJS/ionic</li>
-<li>前端工具：Bower/Gulp/SaSS/LeSS/PhoneGap</li>
-<li>数据库相关：MySQL/PgSQL/PDO/SQLite</li>
-<li>版本管理、文档和自动化部署工具：Svn/Git/PHPDoc/Phing/Composer</li>
-<li>单元测试：PHPUnit/SimpleTest/Qunit</li>
-<li>云和开放平台：SAE/BAE/AWS/微博开放平台/微信应用开发</li>
+<li>后台框架：jfinal/springmvc/struts2/spring/hibernate/mybaits</li>
+<li>Web框架：ligerui</li>
+<li>前端相关：html/css/jquery/javascript/json</li>
+<li>数据库相关：MySQL/h2/redis/powerdesigner</li>
+<li>中间件：activemq</li>
+<li>版本管理：Svn/Git/</li>
+<li>操作系统：linux</li>
+<li>云和开放平台：钉钉应用开发</li>
 </ul>
-<h2>参考技能关键字</h2>
-<p>本技能关键字列表是从最近招聘Java的数百份JD中统计出来的，括号中是出现的词频。如果你的简历要投递给有机器（简历分选系统）和不如机器（不懂技术的HR）筛选简历环节的地方，请一定从下边高频关键词中选择5～10个适合你自己的。</p>
-<ul>
-<li>java(730)</li>
-<li>spring(305)</li>
-<li>web(260)</li>
-<li>mysql(250)</li>
-<li>oracle(207)</li>
-<li>linux(198)</li>
-<li>j2ee(182)</li>
-<li>javascript(177)</li>
-<li>sql(176)</li>
-<li>hibernate(169)</li>
-<li>html(139)</li>
-<li>tomcat(132)</li>
-<li>struts(128)</li>
-<li>jquery(116)</li>
-<li>jsp(106)</li>
-<li>ajax(96)</li>
-<li>css(94)</li>
-<li>ibatis(84)</li>
-<li>mvc(77)</li>
-<li>servlet(71)</li>
-<li>xml(70)</li>
-<li>js(62)</li>
-<li>eclipse(51)</li>
-<li>mybatis(51)</li>
-<li>jboss(47)</li>
-<li>struts2(47)</li>
-<li>weblogic(46)</li>
-<li>redis(46)</li>
-<li>apache(45)</li>
-<li>http(44)</li>
-<li>shell(39)</li>
-<li>python(38)</li>
-<li>hadoop(37)</li>
-<li>nosql(35)</li>
-<li>ssh(35)</li>
-<li>sqlserver(33)</li>
-<li>mongodb(33)</li>
-<li>svn(32)</li>
-<li>uml(32)</li>
-<li>json(27)</li>
-<li>unix(27)</li>
-<li>maven(27)</li>
-<li>nginx(26)</li>
-<li>webservice(25)</li>
-<li>jdbc(24)</li>
-<li>memcached(23)</li>
-<li>tcp(22)</li>
-<li>resin(22)</li>
-<li>jvm(21)</li>
-<li>socket(21)</li>
-<li>db2(19)</li>
-<li>springmvc(19)</li>
-<li>websphere(16)</li>
-<li>soa(16)</li>
-<li>mina(14)</li>
-<li>android(14)</li>
-<li>extjs(13)</li>
-<li>erp(12)</li>
-<li>memcache(12)</li>
-<li>api(11)</li>
-<li>jetty(11)</li>
-<li>myeclipse(11)</li>
-<li>ext(10)</li>
-<li>git(10)</li>
-<li>jpa(10)</li>
-<li>svm(9)</li>
-<li>php(9)</li>
-<li>jms(9)</li>
-<li>ruby(9)</li>
-<li>lucene(8)</li>
-<li>html5(8)</li>
-<li>postgresql(8)</li>
-<li>crm(7)</li>
-<li>javaee(7)</li>
-<li>sybase(7)</li>
-<li>freemarker(6)</li>
-<li>cache(6)</li>
-<li>jsf(6)</li>
-<li>j2se(6)</li>
-<li>jbpm(6)</li>
-<li>cvs(6)</li>
-<li>junit(6)</li>
-<li>visio(6)</li>
-<li>netty(6)</li>
-<li>hbase(6)</li>
-<li>nio(6)</li>
-<li>powerdesigner(6)</li>
-<li>oo(6)</li>
-<li>aop(6)</li>
-<li>workflow(5)</li>
-<li>restful(5)</li>
-<li>ios(5)</li>
-<li>ant(5)</li>
-<li>mssql(5)</li>
-<li>orm(5)</li>
-<li>rose(5)</li>
-<li>solr(5)</li>
-<li>webwork(5)</li>
-<li>zookeeper(4)</li>
-<li>soap(4)</li>
-<li>o2o(4)</li>
-<li>wap(4)</li>
-<li>cxf(4)</li>
-<li>thrift(4)</li>
-<li>xmpp(3)</li>
-<li>p2p(3)</li>
-<li>javabean(3)</li>
-<li>jee(3)</li>
-<li>hdfs(3)</li>
-<li>dom(3)</li>
-<li>hibernate3(3)</li>
-</ul>
+<p>最近在学习技术：
+各种技术的整合，架构的搭建，包括：redis,mq,keepalived,zookeeper,dubbo,cas单点登录等。</p>
 <hr />
 <h1>致谢</h1>
 <p>感谢您花时间阅读我的简历，期待能有机会和您共事。</p>
