--- a/index.html
+++ b/index.html
@@ -304,59 +304,46 @@ img {
 <li>技术博客：https://my.oschina.net/WWWW23223/</li>
 </ul>
 <hr />
-<h1>工作经历</h1>
-
-<h2>广州八斗科技有限公司 （ 2015年4月 ~ 2016年2月 ）</h2>
-<h3>工资发放系统</h3>
-<p>系统基于B/S架构。采用基于MVC模式整合Struts2，Hibernate，Spring进行开发， 前端用到的框架是LigerUi(类EasyUi)。包括有工人信息模块，信息验证模块，工资发放账目，工资设定，工人工作记录等。</p>
-<p>本人负责的是工人信息模块，开发工人信息的录入，修改，删除，导出等功能。前端展示用到LigerUi， jquery，js，ajax等技术，后台代码采用整合SSH进行对数据的控制，持久化等管理。</p>
-<h3>进销存项目</h3>
-<p>包括有销售，采购，财务，库存，行政，微信等几大模块。</p>
-<p>本人负责的是采购模块。其中包括采购回顾，销售报表统计，供应商，采购计划，财务付款，仓库入货等小模块。 根据需求说明书，个人独立完成了数据库，类的设计，页面开发，测试等。此系统整体采用MVC模式，用Struts2进行流程的控制， 前端页面使用jstl标签及LigerUi（用法与EasyUi相似）框架显示，还使用到ajax，js,jquery等技术。业务层使用的是Spring， 持久层使用的是Hibernate实现；数据库使用的是mysql。技术难点：商品数据统计不能过慢，业务逻辑性较强，涉及流程处理</p>
-<h2>深圳点墨网络科技有限公司 （ 2016年 ）</h2>
-<h3>教育系统</h3>
-<p>教育O2O系统。
-本人负责数据库的一些设计，后台个人中心的功能的开发，课程发现（课程，老师，机构等功能），发现模块（附近机构，同学圈，活动等功能），涉及技术：spring,springmvc,mybatis，jquery,script,ajax,微信开发（由于公司发展不下去，团队解散）</p>
-<h2>深圳市关键词教育股份有限公司 （ 2016年6月 ~ 2017年6月 ）</h2>
-<h3>HR系统</h3>
-<p>系统结构介绍。
-人事信息管理模块：包括人员信息，员工信息，教育信息，假期信息，工作经历等</p>
-<p>系统管理模块：包括组织架构，区域管理、 菜单管理、角色权限管理、数据字典管理，用户管理等。</p>
-<p>系统功能：
-人事模块除了基本的crud 导入导出，还与钉钉系统中的数据进行了整合，操作员进行员工信息的增删改时会同时对钉钉系统中的对应的数据进行相对应的操作。 </p>
-<p>系统管理模块中基本包括了一个系统的基本配置功能，组织架构也是与钉钉中的组织架构进行了整合绑定，细粒度的权限管理能过滤行，列。</p>
-<p>公司的员工能在钉钉系统中的微应用进行登录并查看或修改自己的一些数据（需管理员开放相关权限），也能通过使用钉钉扫码进行登录系统。</p>
-<p>此系统为本人独立开发。</p>
-<p>开发中遇到的最大难题就是权限管理这一块，由于要求权限要能控制到数据的某个字段，这对于未接触过这方面的我是一个挑战，但最终采用一种数据共享规则的方案（配置规则，视图等）解决了这问题，不同角色的用户能查看，增加，修改，删除不同数据（记录或字段）。</p>
-<p>还有就在与钉钉系统整合过程中，数据的关联由于设计不合理出现一些问题，最终通过优化数据库的设计来解决。</p>
-<p>主要使用技术：
-JFinal (mvc框架)
-ligerui （前端展示框架）
-h2 （内存数据库，缓存热点数据）
-mysql (数据库)
-shiro ( 权限管理)
-so on</p>
-<h3>vpn登录管理项目</h3>
-<p>这是一个管理用户与第三方vpn供应商的项目。本人负责后台功能的实现，包括文件上传，配置，打包，与钉钉用户的验证等。
-主要使用技术：
-JFinal html css 等</p>
-<h3>其他项目</h3>
-<p>抽奖项目，校区电话录音仪数据读取项目</p>
-<hr />
 <h1>技能清单</h1>
 <p>以下均为我熟练使用的技能</p>
 <ul>
-<li>后台框架：jfinal/springmvc/struts2/spring/hibernate/mybaits</li>
+<li>后台框架：springmvc/struts2/spring/hibernate/mybaits/jfinal/shiro</li>
 <li>Web框架：ligerui</li>
 <li>前端相关：html/css/jquery/javascript/ajax</li>
 <li>数据库相关：MySQL/h2/redis/powerdesigner</li>
 <li>中间件：activemq</li>
 <li>版本管理：Svn/Git/</li>
-<li>操作系统：linux</li>
 <li>云和开放平台：钉钉应用开发</li>
+<li>其它：java,linux,tomcat,maven</li>
 </ul>
-<p>最近在学习技术：
-各种技术的整合，架构的搭建，包括：redis,mq,keepalived,zookeeper,dubbo,cas单点登录等。</p>
+<p>以上为我熟练的技术，最近在研究的一些分布式技术：keepalived,zookeeper,dubbo,cas等。</p>
+<hr />
+<h1>工作经历</h1>
+
+<h2>深圳市关键词教育股份有限公司 （ 2016年6月 ~ 2017年6月 ）</h2>
+<h3>HR系统</h3>
+<p>人事信息管理模块：人员信息，员工信息，教育信息，假期信息，工作经历等</p>
+<p>系统管理模块：组织架构，区域管理、 菜单管理、角色权限管理、数据字典管理，用户管理，日志等。</p>
+<p>系统亮点： 用户通过钉钉或登录窗口登录，不同角色用户显示数据不同，操作功能不同。数据能精准控制到行，列。钉钉与系统进行了整合，公司钉钉组织架构及用户信息与系统能进行同步。</p>
+<p>此系统为本人独立开发。开发中遇到的最大难题就是权限管理这一块，最终采用一种数据共享规则的方案（配置规则，视图等）解决了这问题，不同角色的用户能查看，增加，修改，删除不同数据（记录或字段）。</p>
+<p>主要使用技术： JFinal (mvc框架) ligerui （前端展示框架） h2 （内存数据库，缓存热点数据） mysql (数据库) shiro ( 权限管理) so on</p>
+<h3>vpn登录管理项目</h3>
+<p>这是一个管理用户与第三方vpn供应商的项目。本人负责后台功能的实现，包括文件上传，配置，打包，与钉钉用户的验证等。 <p/>
+<p>主要使用技术： JFinal html css 等</p>
+<h3>其他项目</h3>
+<p>抽奖项目，校区电话录音仪数据读取项目</p>
+<h2>深圳点墨网络科技有限公司 （ 2016年 ）</h2>
+<h3>教育系统</h3>
+<p>教育O2O系统。
+本人负责数据库的一些设计，后台个人中心的功能的开发，课程发现（课程，老师，机构等功能），发现模块（附近机构，同学圈，活动等功能），涉及技术：spring,springmvc,mybatis，jquery,script,ajax,微信开发（由于公司发展不下去，团队解散，大概呆了3个月）</p>
+<h2>广州八斗科技有限公司 （ 2015年4月 ~ 2016年3月 ）</h2>
+<h3>进销存项目</h3>
+<p>本人负责的是采购模块。其中包括采购回顾，销售报表统计，供应商，采购计划，财务付款，仓库入货等小模块。 根据需求说明书，个人独立完成了数据库，类的设计，页面开发，测试等。</p>
+<p>使用技术：Struts2/spring/hibernate/mysql ajax js jquery等</p>
+<h3>工资发放系统</h3>
+<p>系统基于B/S架构。采用基于MVC模式整合Struts2，Hibernate，Spring进行开发， 前端用到的框架是LigerUi(类EasyUi)。包括有工人信息模块，信息验证模块，工资发放账目，工资设定，工人工作记录等。</p>
+<p>本人负责的是工人信息模块，开发工人信息的录入，修改，删除，导出等功能。</p>
+<p>主要使用技术：前端展示用到LigerUi， jquery，js，ajax等技术，后台代码采用整合SSH进行对数据的控制，持久化等管理。</p>
 <hr />
 <h1>致谢</h1>
 <p>感谢您花时间阅读我的简历，期待能有机会和您共事。</p>
